Fix theme svg spacing

--- a/www/_includes/default.scss
+++ b/www/_includes/default.scss
@@ -19,6 +19,7 @@ html[data-bs-theme="dark"] {
     svg {
       width: 24px;
       height: 24px;
+      margin-right: .5rem;
     }
   }
   .dropdown-menu {
